fix: horizontal scrolling issue, #23

--- a/prosjekt1/src/assets/styles.css
+++ b/prosjekt1/src/assets/styles.css
@@ -29,6 +29,11 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
+  width: 100%;
+}
+
+#root {
+  width: 100%;
 }
 
 a {
