--- a/prosjekt1/src/components/CarouselItem/CarouselItem.css
+++ b/prosjekt1/src/components/CarouselItem/CarouselItem.css
@@ -10,7 +10,7 @@
 }
 
 .carousel-item img {
-  width: 50vh;
+  width: 50vw;
   max-width: 70%;
   margin: auto;
   display: block;
@@ -39,7 +39,7 @@
   }
 
   .carousel-item img {
-    width: 30vh;
+    width: 30vw;
     max-width: none;
   }
 }
