--- a/prosjekt1/src/pages/browse/Browse.css
+++ b/prosjekt1/src/pages/browse/Browse.css
@@ -3,16 +3,11 @@ body {
   height: 100%;
 }
 
-#root {
-  width: 100vw;
-}
-
 .container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: stretch;
-  height: 100%;
 }
 
 /*Filter CSS*/
@@ -37,7 +32,7 @@ h3 {
 .filterButton,
 .clearButton {
   -webkit-text-fill-color: black;
-  margin-right: 10%;
+  
   margin-top: 10%;
   height: 6vh;
   width: 100%;
@@ -113,7 +108,6 @@ h3 {
 
   .filterButton,
   .clearButton {
-    margin-right: 10%;
     margin-top: 2%;
     height: 4vh;
     font-size: auto;
