--- a/prosjekt1/src/pages/home/home.css
+++ b/prosjekt1/src/pages/home/home.css
@@ -1,5 +1,5 @@
 .carousel {
-  width: 80vh;
+  width: 80vw;
   height: 80%;
   margin: 1em auto;
   position: relative;
